--- a/README.org
+++ b/README.org
@@ -42,12 +42,12 @@ There are faculties provided to auto-generate your /Works Cited/ page, but shoul
 * The =general-apa= Template
 This template is for general documents that aren't required to fit any style.
 It's named "general-apa" because should you /need/ to include the occasional citation or bibliography, this template can do so according to APA format [[https://owl.purdue.edu/owl/research_and_citation/apa_style/apa_style_introduction.html][according to the Purdue OWL]].
-** TODO add customization info for apa-general setup in readme :noexport:
-** TODO add org-ref setup :noexport:
-*** TODO add package biblatex in latex header in preamble
-*** TODO add skeleton code for bibliography with org-ref
-*** TODO add skeleton code for bibliography style with org ref
-*** TODO add csl for mla8 to dir for org-ref and setup in preamble
+
+This template will make a title for you on your final LaTeX PDF, so make sure you include your title, name, and date.
+Alternatively, you can toggle those off in the =.preamble.org= file.
+Page numbers are included at the bottom center of your document.
+Margins are 1 inch all around.
+You can use =#+begin_tcolorbox= and =#+end_tcolorbox= blocks put colored boxes around sentences (LaTeX export only).
 * The =history-cmos= Template
 This template does its best to adhere to the Purdue OWL [[https://owl.purdue.edu/owl/research_and_citation/chicago_manual_17th_edition/cmos_formatting_and_style_guide/chicago_manual_of_style_17th_edition.html][guidelines for the Chicago Manual of Style, 17th ed]] (notes-bibliography).
 I use macro expansion with this template also, so be sure to put your name, title of your work, and the date in the proper sections.
