started apa template, fixed urls
Haven't finished apa-science template yet. Fixed hyperref settings to
make URLs blue in bibliographies and notes now.

--- a/english-mla/.preamble.org
+++ b/english-mla/.preamble.org
@@ -51,6 +51,11 @@
 #+LATEX_HEADER: \usepackage{url}
 #+LATEX_HEADER: \urlstyle{same}
 
+# hyperref settings
+#+LATEX_HEADER_EXTRA: \hypersetup{
+#+LATEX_HEADER_EXTRA:   urlcolor=cyan,
+#+LATEX_HEADER_EXTRA: }
+
 # For the hack later to make bibliotgraphy work right.
 #+LATEX_HEADER: \usepackage{comment}
 
