--- a/general-apa/.preamble.org
+++ b/general-apa/.preamble.org
@@ -44,6 +44,11 @@
 #+LATEX_HEADER: \usepackage{url}
 #+LATEX_HEADER: \urlstyle{same}
 
+# hyperref settings
+#+LATEX_HEADER_EXTRA: \hypersetup{
+#+LATEX_HEADER_EXTRA:   urlcolor=cyan,
+#+LATEX_HEADER_EXTRA: }
+
 # To be able to make questions stand out
 #+LATEX_HEADER: \usepackage{tcolorbox}
 
