--- a/general-apa/.preamble.org
+++ b/general-apa/.preamble.org
@@ -46,7 +46,12 @@
 
 # hyperref settings
 #+LATEX_HEADER_EXTRA: \hypersetup{
+#+LATEX_HEADER_EXTRA:   colorlinks=true,
 #+LATEX_HEADER_EXTRA:   urlcolor=cyan,
+#+LATEX_HEADER_EXTRA:   linktocpage=true,
+#+LATEX_HEADER_EXTRA:   linkcolor=black,
+#+LATEX_HEADER_EXTRA:   citecolor=black,
+#+LATEX_HEADER_EXTRA:   pdfpagemode=UseOutlines,
 #+LATEX_HEADER_EXTRA: }
 
 # To be able to make questions stand out
