--- a/general-apa/.preamble.org
+++ b/general-apa/.preamble.org
@@ -61,7 +61,7 @@
 #+LATEX_HEADER: \usepackage{comment}
 
 # For bibliographies and stuff outside of latex export
-#+CSL-STYLE: ./apa-7.csl
+#+CSL-STYLE: ./bib/apa-7.csl
 #+CSL-LOCALE: en-US
 
 # To make blockquotes single-spaced and indent more
