--- a/history-cmos/history-cmos-orgmode-template.org
+++ b/history-cmos/history-cmos-orgmode-template.org
@@ -3,7 +3,7 @@
 #+AUTHOR: yourfirstname yourlastname
 #+SETUPFILE: ./.preamble.org
 # Specify bibliography here because org-ref likes it this way.
-#+LATEX_HEADER: \addbibresource{./dummy.bib}
+#+LATEX_HEADER: \addbibresource{./bib/citations.bib}
 
 #+begin_center
 {{{title}}}
