--- a/english-mla/src/.preamble.org
+++ b/english-mla/src/.preamble.org
@@ -1,10 +1,15 @@
-#+OPTIONS: toc:nil num:nil author:t title:t date:t
+# In my MLA essays, I generally don't need a TOC or section numbering. Moreover,
+# I don't need a cover page, so I the title switch.
+#+OPTIONS: toc:nil num:nil author:t title:nil
 
 # Xelatex because it's my preferred, 12pt and letterpaper according to MLA spec.
 #+LATEX_COMPILER: xelatex
 #+LATEX_CLASS_OPTIONS: [12pt, letterpaper]
 
+# MLA says documents should have 1in margins and typically be TNR font.
 #+LATEX_HEADER: \usepackage[margin=1in]{geometry}
+#+LATEX_HEADER: \usepackage{fontspec}
+#+LATEX_HEADER: \setmainfont{Times New Roman}
 #+LATEX_HEADER: \usepackage{setspace}
 #+LATEX_HEADER: \doublespacing
 
@@ -17,12 +22,14 @@
 #+LATEX_HEADER: \pagestyle{fancy}
 
 # To include the author and page number in the header of the page
-#+LATEX_HEADER_EXTRA: \lhead{}
-#+LATEX_HEADER_EXTRA: \chead{}
-#+LATEX_HEADER_EXTRA: \rhead{}
-#+LATEX_HEADER_EXTRA: \lfoot{}
-#+LATEX_HEADER_EXTRA: \cfoot{\thepage}
-#+LATEX_HEADER_EXTRA: \rfoot{}
+#+LATEX_HEADER_EXTRA: \makeatletter
+#+LATEX_HEADER_EXTRA:   \lhead{}
+#+LATEX_HEADER_EXTRA:   \chead{}
+#+LATEX_HEADER_EXTRA:   \rhead{\@author\ \thepage}
+#+LATEX_HEADER_EXTRA:   \lfoot{}
+#+LATEX_HEADER_EXTRA:   \cfoot{}
+#+LATEX_HEADER_EXTRA:   \rfoot{}
+#+LATEX_HEADER_EXTRA: \makeatother
 #+LATEX_HEADER_EXTRA: \renewcommand{\headrulewidth}{0pt}
 #+LATEX_HEADER_EXTRA: \renewcommand{\footrulewidth}{0pt}
 #+LATEX_HEADER_EXTRA: \setlength{\headheight}{14.5pt}
@@ -32,7 +39,7 @@
 #+LATEX_HEADER: \usepackage{csquotes}
 #+LATEX_HEADER: \usepackage[english]{babel}
 #+LATEX_HEADER: \usepackage[
-#+LATEX_HEADER:   style=apa,
+#+LATEX_HEADER:   style=mla,
 #+LATEX_HEADER:   hyperref=true,
 #+LATEX_HEADER:   maxcitenames=3,
 #+LATEX_HEADER:   url=true,
@@ -54,20 +61,13 @@
 #+LATEX_HEADER_EXTRA:   pdfpagemode=UseOutlines,
 #+LATEX_HEADER_EXTRA: }
 
-# To be able to make questions stand out
-#+LATEX_HEADER: \usepackage{tcolorbox}
-
 # For the hack later to make bibliotgraphy work right.
 #+LATEX_HEADER: \usepackage{comment}
 
 # For bibliographies and stuff outside of latex export
-#+CSL-STYLE: ./bib/apa-7.csl
+#+CSL-STYLE: ./bib/mla-8.csl
 #+CSL-LOCALE: en-US
 
 # To make blockquotes single-spaced and indent more
 #+MACRO: bqstart @@latex:\begin{quote} \begin{spacing}{1.0}@@
 #+MACRO: bqend @@latex:\end{spacing} \end{quote}@@
-
-# To make paragraph length and bibliography hanging indent compliant
-@@latex:\setlength{\parindent}{0.5in}@@
-@@latex:\setlength{\bibhang}{0.5in}@@
