--- a/science-apa/src/.preamble.org
+++ b/science-apa/src/.preamble.org
@@ -1,5 +1,3 @@
-# In my MLA essays, I generally don't need a TOC or section numbering. Moreover,
-# I don't need a cover page, so I the title switch.
 #+OPTIONS: toc:nil num:nil author:t title:nil
 
 # Xelatex because it's my preferred, 12pt and letterpaper according to MLA spec.
@@ -39,7 +37,7 @@
 #+LATEX_HEADER: \usepackage{csquotes}
 #+LATEX_HEADER: \usepackage[english]{babel}
 #+LATEX_HEADER: \usepackage[
-#+LATEX_HEADER:   style=mla,
+#+LATEX_HEADER:   style=apa,
 #+LATEX_HEADER:   hyperref=true,
 #+LATEX_HEADER:   maxcitenames=3,
 #+LATEX_HEADER:   url=true,
@@ -65,13 +63,10 @@
 #+LATEX_HEADER: \usepackage{comment}
 
 # For bibliographies and stuff outside of latex export
-#+CSL-STYLE: ./bib/mla-8.csl
+#+CSL-STYLE: ./bib/apa-7.csl
 #+CSL-LOCALE: en-US
 
 # To make blockquotes single-spaced and indent more
 #+MACRO: bqstart @@latex:\begin{quote} \begin{spacing}{1.0}@@
 #+MACRO: bqend @@latex:\end{spacing} \end{quote}@@
 
-# To make paragraph length and bibliography hanging indent compliant
-@@latex:\setlength{\parindent}{0.5in}@@
-@@latex:\setlength{\bibhang}{0.5in}@@
